Added index html page and documentation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,6 @@ fireeye.pwned.ssp.app.name=FIREEYE_PWNED_SSP_DEMO
 fireeye.pwned.ssp.base.url=https://haveibeenpwned.com/api/v2
 fireeye.pwned.password.ssp.base.url=https://api.pwnedpasswords.com/range
 spring.jackson.serialization.indent_output=true
-server.servlet.context-path=/pwned
+#server.servlet.context-path=/pwned
+spring.security.user.name=admin
+spring.security.user.password=admin
